fix: hover on mobile

--- a/style.css
+++ b/style.css
@@ -193,3 +193,9 @@ body {
 .button:hover {
   opacity: 0.7;
 }
+
+@media (max-width: 768px) {
+  .button:hover {
+    opacity: 1;
+  }
+}
